; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_render_sort_dialog.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_render_sort_dialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.TYPE_4__ = type { i32, i32 }

@main_win = common dso_local global i32 0, align 4
@gscroll = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@module_sort = common dso_local global i32* null, align 8
@gdns_thread = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@holder = common dso_local global i32 0, align 4
@dash = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @render_sort_dialog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_sort_dialog() #0 {
  %1 = load i32, i32* @main_win, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 0), align 8
  %3 = load i32*, i32** @module_sort, align 8
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 0), align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = call i32 @load_sort_win(i32 %1, i64 %2, i32* %5)
  %7 = call i32 @pthread_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gdns_thread, i32 0, i32 0))
  %8 = call i32 @free_holder(i32* @holder)
  %9 = call i32 @pthread_cond_broadcast(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gdns_thread, i32 0, i32 1))
  %10 = call i32 @pthread_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gdns_thread, i32 0, i32 0))
  %11 = load i32, i32* @dash, align 4
  %12 = call i32 @free_dashboard(i32 %11)
  %13 = call i32 (...) @allocate_holder()
  %14 = call i32 (...) @allocate_data()
  %15 = call i32 (...) @render_screens()
  ret void
}

declare dso_local i32 @load_sort_win(i32, i64, i32*) #1

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @free_holder(i32*) #1

declare dso_local i32 @pthread_cond_broadcast(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @free_dashboard(i32) #1

declare dso_local i32 @allocate_holder(...) #1

declare dso_local i32 @allocate_data(...) #1

declare dso_local i32 @render_screens(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
